force-app/main/default/objects/AuditEvent__c/AuditEvent__c.object-meta.xml
<CustomObject>
    <description>Audit trail for significant actions in the API Version Updater</description>
    <label>Audit Event</label>
    <nameField>
        <displayFormat>AUDIT-{000000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>