force-app/main/default/objects/AuditEvent__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who performed the action</description>
    <label>Actor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AuditEvents</relationshipName>
    <type>Lookup</type>
</CustomField>