force-app/main/default/objects/AuditEvent__c/fields/DetailsJson__c.field-meta.xml
<CustomField>
    <fullName>DetailsJson__c</fullName>
    <description>JSON details of the event</description>
    <label>Details JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>