force-app/main/default/objects/AuditEvent__c/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <description>Type of audit event</description>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WriteModeEnabled</fullName>
                <label>Write Mode Enabled</label>
            </value>
            <value>
                <fullName>WriteModeDisabled</fullName>
                <label>Write Mode Disabled</label>
            </value>
            <value>
                <fullName>ScanStarted</fullName>
                <label>Scan Started</label>
            </value>
            <value>
                <fullName>ScanCompleted</fullName>
                <label>Scan Completed</label>
            </value>
            <value>
                <fullName>PlanCreated</fullName>
                <label>Plan Created</label>
            </value>
            <value>
                <fullName>PlanValidated</fullName>
                <label>Plan Validated</label>
            </value>
            <value>
                <fullName>DeployStarted</fullName>
                <label>Deploy Started</label>
            </value>
            <value>
                <fullName>DeployFinished</fullName>
                <label>Deploy Finished</label>
            </value>
            <value>
                <fullName>SettingsChanged</fullName>
                <label>Settings Changed</label>
            </value>
            <value>
                <fullName>ChangePlanCreated</fullName>
                <label>Change Plan Created</label>
            </value>
            <value>
                <fullName>DeploymentStarted</fullName>
                <label>Deployment Started</label>
            </value>
            <value>
                <fullName>ScanCancelled</fullName>
                <label>Scan Cancelled</label>
            </value>
            <value>
                <fullName>BackupCreated</fullName>
                <label>Backup Created</label>
            </value>
            <value>
                <fullName>RestoreCompleted</fullName>
                <label>Restore Completed</label>
            </value>
            <value>
                <fullName>ScanDeleted</fullName>
                <label>Scan Deleted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>